Fix background issue on mobile

--- a/src/components/background.module.css
+++ b/src/components/background.module.css
@@ -18,7 +18,7 @@
 }
 
 .circles {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
